--- a/python-programming.html
+++ b/python-programming.html
@@ -21,15 +21,15 @@
 	     <a href="/notes/index.html">Notes</a>
 	     </div>
 	      <div id="main">
-          <h3>Python Programming (81):</h3>
+          <h3>Python Programming (75):</h3>
           <br />
           <ul>
           <li><a href="python-programming.html#Blogs">Blogs, Info, News</a> (4)</li>
           <li><a href="python-programming.html#Forums">Forums</a> (1)</li>
-          <li><a href="python-programming.html#eBooks">Free eBooks</a> (23)</li>
+          <li><a href="python-programming.html#eBooks">Free eBooks</a> (19)</li>
           <li><a href="python-programming.html#IDE">(IDE) Integrated Development Environments &amp; Editors</a> (6)</li>
           <li><a href="python-programming.html#IRC">IRC Channels</a> (2)</li>
-          <li><a href="python-programming.html#Learn">Learn Python Programming</a> * (31)</li>
+          <li><a href="python-programming.html#Learn">Learn Python Programming</a> * (29)</li>
           <li><a href="python-programming.html#Online-Ed">Online Editors</a> (4)</li>
           <li><a href="python-programming.html#VCS">Version Control</a> (7)</li>
           <li><a href="python-programming.html#WebFrameworks">Web Frameworks</a> (3)</li>
@@ -38,9 +38,9 @@
           <br /><br /><br /><br />
 
           <h3><a id="Blogs">Blogs, Info, News</a> (4):</h3>
-          <p>Planet Python <a href="http://planetpython.org/">http://planetpython.org/</a></p>
-          <p>PyBites <a href="http://pybit.es/">http://pybit.es/</a></p>
-          <p>Python Insider <a href="http://blog.python.org/">http://blog.python.org/</a></p>
+          <p>Planet Python <a href="https://planetpython.org/">https://planetpython.org/</a></p>
+          <p>PyBites <a href="https://pybit.es/">https://pybit.es/</a></p>
+          <p>Python Insider <a href="https://blog.python.org/">https://blog.python.org/</a></p>
           <p>reddit/Python <a href="https://www.reddit.com/r/Python/">https://www.reddit.com/r/Python/</a></p>
 
           <br /><br /><br /><br />
@@ -50,9 +50,9 @@
 
           <br /><br /><br /><br />
 
-          <h3><a id="eBooks">Free eBooks</a> (23):</h3>
+          <h3><a id="eBooks">Free eBooks</a> (19):</h3>
           <br />
-          <p><a href="http://python.swaroopch.com/">A Byte of Python</a> is a free book on programming using the Python language. It serves as a tutorial or guide to the Python language for a
+          <p><a href="https://python.swaroopch.com/">A Byte of Python</a> is a free book on programming using the Python language. It serves as a tutorial or guide to the Python language for a
           beginner audience. If all you know about computers is how to save text files, then this is the book for you.</p>
           <br /><br />
           <p><a href="https://automatetheboringstuff.com/">Automate The Boring Stuff With Python</a> Practical Programming for Total Beginners by Al Sweigart</p>
@@ -60,16 +60,11 @@
           <p><a href="https://archive.org/details/pdfy-rJnW-pPgiHK61dok">Black Hat Python, Python Programming for Hackers</a> you'll explore the darker side of Python's capabilities—writing network
           sniffers, manipulating packets, infecting virtual machines, creating stealthy trojans, and more.</p>
           <br /><br />
-          <p><a href="https://archive.org/details/CorePythonProgramming">Core Python Programming, 2nd Edition</a>, leading Python developer and trainer Wesley Chun helps you learn Python quickly and
-          comprehensively so that you can immediately succeed with any Python project.</p>
-          <br /><br />
-          <p><a href="http://getpython3.com/diveintopython3/">Dive Into Python 3</a> is a hands-on guide to Python 3 and its differences from Python 2.</p>
-          <br /><br />
           <p><a href="https://archive.org/details/functional-programming-python">Functional Programming In Python</a> - Python is not a functional programming language, but it is a multi-paradigm
           language that makes functional programming easy to perform, and easy to mix with other programming styles. In this paper, David Mertz, a director of Python Software Foundation, examines the
           functional aspects of the language and points out which options work well and which ones you should generally decline.</p>
           <br /><br />
-          <p><a href="http://inventwithpython.com/hacking/chapters/">Hacking Secret Ciphers with Python</a> teaches complete beginners how to program in the Python programming language. The book
+          <p><a href="https://inventwithpython.com/hacking/chapters/">Hacking Secret Ciphers with Python</a> teaches complete beginners how to program in the Python programming language. The book
           features the source code to several ciphers and hacking programs for these ciphers. The programs include the Caesar cipher, transposition cipher, simple substitution cipher, multiplicative and
            affine ciphers, Vigenere cipher, and hacking programs for each of these ciphers. The final chapters cover the modern RSA cipher and public key cryptography.</p>
           <br /><br />
@@ -77,7 +72,7 @@
           <br /><br />
           <p><a href="https://archive.org/details/Introduction_to_Programming_Using_Python_by_Y._Daniel_Liang">Introduction to Programming Using Python</a> by Y. Daniel Liang</p>
           <br /><br />
-          <p><a href="http://inventwithpython.com/chapters/">Invent Your Own Computer Games with Python</a> This book teaches you how to program by making video games. Once you learn how the games in
+          <p><a href="https://inventwithpython.com/chapters/">Invent Your Own Computer Games with Python</a> This book teaches you how to program by making video games. Once you learn how the games in
           this book work, you’ll be able to create your own games. All you’ll need is a computer, some software called the Python interpreter, and this book.</p>
           <br /><br />
           <p><a href="https://archive.org/details/LearningPython">Learning Python, 4th Edition</a> - Get a comprehensive, in-depth introduction to the core Python language
@@ -106,14 +101,7 @@
           code, this book is just the ticket. Packed with practical recipes written and tested with Python 3.3, this unique cookbook is for experienced Python programmers who want to focus on modern
           tools and idioms.</p>
           <br /><br />
-          <p><a href="http://do1.dr-chuck.com/pythonlearn/">Python For Everybody</a> by Charles Severance. The goal of this book is to provide an Informatics-oriented introduction to programming. The primary difference between a computer science approach and the Informatics approach taken in this book is a greater focus on using Python to solve data analysis problems common in the world of Informatics.</p>
-          <br /><br />
-          <p><a href="http://pythonlearn.com/book.php">Python for Informatics: Exploring Information</a> by Charles Severance. The goal of this book is to provide an Informatics-oriented introduction
-          to programming. The primary difference between a computer science approach and the Informatics approach taken in this book is a greater focus on using Python to solve data analysis problems
-          common in the world of Informatics.</p>
-          <br /><br />
-          <p><a href="https://archive.org/details/PythonProgrammingForTheAbsoluteBeginner3rdEdition">Python Programming For The Absolute Beginner, 3rd Edition</a> - If you are new to programming with
-          Python and are looking for a solid introduction, this is the book for you.</p>
+          <p><a href="https://www.py4e.com/">Python For Everybody</a> by Charles Severance. The goal of this book is to provide an Informatics-oriented introduction to programming. The primary difference between a computer science approach and the Informatics approach taken in this book is a greater focus on using Python to solve data analysis problems common in the world of Informatics.</p>
           <br /><br />
           <p>"<a href="http://www.spronck.net/pythonbook/">The Coder's Apprentice</a>" is a course book, written by Pieter Spronck, that is aimed at teaching Python 3 to students and teenagers who are completely new to programming. Contrary to many of the other books that teach Python programming, this book assumes no previous knowledge of programming on the part of the students, and contains numerous exercises that allow students to train their programming skills.</p>
           <br /><br />
@@ -133,11 +121,11 @@
           <br /><br />
           <p><a href="http://bluefish.openoffice.nl/">Bluefish</a> is a powerful open source editor targeted towards programmers and web-developers, with many options to write websites, scripts and programming code. Bluefish supports many programming and markup languages.</p>
           <br /><br />
-          <p><a href="http://www.geany.org/">Geany</a> is an open source text editor using the GTK+ toolkit with basic features of an integrated development environment. It was developed to provide a small and fast IDE, which has only a few dependencies from other packages. It supports many filetypes and has some nice features.</p>
+          <p><a href="https://www.geany.org/">Geany</a> is an open source text editor using the GTK+ toolkit with basic features of an integrated development environment. It was developed to provide a small and fast IDE, which has only a few dependencies from other packages. It supports many filetypes and has some nice features.</p>
           <br /><br />
           <p><a href="https://www.kdevelop.org/">KDevelop</a> is a feature-full, cross-platform, extensible IDE.</p>
           <br /><br />
-          <p><a href="http://www.jetbrains.com/pycharm/">PyCharm</a> is an open source IDE that provides code analysis, a graphical debugger, an integrated unit tester, integration with version control
+          <p><a href="https://www.jetbrains.com/pycharm/">PyCharm</a> is an open source IDE that provides code analysis, a graphical debugger, an integrated unit tester, integration with version control
           systems, and supports web development with Django. Community and professional versions are available.</p>
           <br /><br />
           <p><a href="https://code.visualstudio.com/">Visual Studio Code</a> (open source) is a lightweight but powerful source code editor which runs on your desktop and is available for Windows, macOS and Linux. It comes with built-in support for JavaScript, TypeScript and Node.js and has a rich ecosystem of extensions for other languages (such as C++, C#, Python, PHP, Go) and runtimes (such as .NET and Unity).</p>
@@ -150,9 +138,9 @@
 
           <br /><br /><br /><br />
 
-          <h3><a id="Learn">Learn Python Programming *</a> (31):</h3>
+          <h3><a id="Learn">Learn Python Programming *</a> (29):</h3>
           <br />
-          <p><a href="http://www.afterhoursprogramming.com/">After Hours Programming</a> will teach you the fundamentals of the Python programming language. Earn badges as you increase levels.</p>
+          <p><a href="https://www.afterhoursprogramming.com/">After Hours Programming</a> will teach you the fundamentals of the Python programming language. Earn badges as you increase levels.</p>
 
           <br /><br />
 
@@ -172,7 +160,7 @@
 
           <br /><br />
 
-          <p><a href="http://www.guru99.com/python-tutorials.html">Guru99</a> - Python Tutorial for Beginners: Learn in 7 Days.</p>
+          <p><a href="https://www.guru99.com/python-tutorials.html">Guru99</a> - Python Tutorial for Beginners: Learn in 7 Days.</p>
 
           <br /><br />
 
@@ -183,10 +171,6 @@
           <p><a href="https://www.youtube.com/playlist?list=PL0845FEB57E5894C2">Introduction to Programming using Python</a> This YouTube course by John B. Schneider provides an introduction to computer
           programming where it is assumed you have no prior programming experience. The Python programming language is used to present various constructs that are present, in one form or another,
           in nearly all the major computer languages.</p>
-
-          <br /><br />
-
-          <p><a href="http://learnpythontutorial.com/">Learn Python Tutorial</a> has set out to teach you everything you have to know about Python for free. Our goal is to continue teaching Python since learning everything thing there is to know about Python would take years and we have made it our goal to keep adding tutorials to this site daily and when we finally learn everything there is to know about the Python programming language. Python would have probably changed so we will start over teaching the changes in the language. We are determined to be the number one source for learning Python.</p>
 
           <br /><br />
 
@@ -212,7 +196,7 @@
 
           <br /><br />
 
-          <p><a href="http://www.practicepython.org/">Practice Python</a> was created to provide small, short, and relevant introductory Python programming exercises for beginners.</p>
+          <p><a href="https://www.practicepython.org/">Practice Python</a> was created to provide small, short, and relevant introductory Python programming exercises for beginners.</p>
 
           <br /><br />
 
@@ -229,7 +213,7 @@
 
           <br /><br />
 
-          <p><a href="http://www.python-course.eu/">Python Course</a> contains a free and extensive online tutorial by Bernd Klein, well suited for self-learning.</p>
+          <p><a href="https://www.python-course.eu/">Python Course</a> contains a free and extensive online tutorial by Bernd Klein, well suited for self-learning.</p>
 
           <br /><br />
 
@@ -250,7 +234,7 @@
 
           <br /><br />
 
-          <p><a href="http://fbkarsdorp.github.io/python-course/">Python Programming for the Humanities</a> by Folgert Karsdorp and Maarten van Gompel.</p>
+          <p><a href="https://fbkarsdorp.github.io/python-course/">Python Programming for the Humanities</a> by Folgert Karsdorp and Maarten van Gompel.</p>
 
           <br /><br />
 
@@ -270,19 +254,11 @@
 
           <br /><br />
 
-          <p><a href="http://thepythonguru.com/">The Python Guru</a> was created to help students learn python programming easily and fast. We will cover everything you need to become a proficient python developer.</p>
+          <p><a href="https://thepythonguru.com/">The Python Guru</a> was created to help students learn python programming easily and fast. We will cover everything you need to become a proficient python developer.</p>
 
           <br /><br />
 
-          <p><a href="http://usingpython.com/">Using Python</a> - Learn Python programming for GCSE Computing by developing solutions to fun and exciting real-world problems.</p>
-
-          <br /><br />
-
-          <p>w3resource - <a href="http://www.w3resource.com/python/python-tutorial.php">Python Tutorial</a>, <a href="http://www.w3resource.com/python-exercises/">Exercise</a>, and <a href="http://www.w3resource.com/w3skills/python-beginner-quiz/">Quiz</a>.</p>
-
-          <br /><br />
-
-          <p><a href="https://youtu.be/s0pYX-si-do?list=PLnfrUVpsJtF8KXeGgMGCHrsJy2OSXIOan">wap2learn</a> has 39 Python programming tutorials on YouTube.</p>
+          <p>w3resource - <a href="http://www.w3resource.com/python/python-tutorial.php">Python Tutorial</a>, and <a href="http://www.w3resource.com/python-exercises/">Exercise</a></p>
 
           <br /><br />
 
@@ -302,7 +278,7 @@
           <br />
           <p><a href="http://darcs.net/">Darcs</a> is a free and open source, cross-platform version control system, like git, mercurial or svn but with a very different approach: focus on changes rather than snapshots. Darcs offers a freer way of working, and a simpler user interface. Darcs does not require a central server, and work perfectly in offline mode.</p>
           <br /><br />
-          <p><a href="http://www.fossil-scm.org/">Fossil</a> is a distributed version control system, bug tracking system and wiki software server for use in software development.</p>
+          <p><a href="https://www.fossil-scm.org/">Fossil</a> is a distributed version control system, bug tracking system and wiki software server for use in software development.</p>
           <br /><br />
           <p><a href="https://git-scm.com/">Git</a> is a free and open source distributed version control system designed to handle everything from small to very large projects with speed and efficiency.</p>
           <br /><br />
@@ -320,7 +296,7 @@
           <br />
           <p><a href="https://www.djangoproject.com/">Django</a> is a high-level Python Web framework that encourages rapid development and clean, pragmatic design. Built by experienced developers, it takes care of much of the hassle of Web development, so you can focus on writing your app without needing to reinvent the wheel. It’s free and open source.</p>
           <br />
-          <p><a href="http://flask.pocoo.org/">Flask</a> is a micro webdevelopment framework for Python.</p>
+          <p><a href="https://flask.pocoo.org/">Flask</a> is a micro webdevelopment framework for Python.</p>
           <br />
           <p><a href="http://www.web2py.com/">web2py</a> is a free open source full-stack framework for rapid development of fast, scalable, secure and portable database-driven web-based applications.</p>
 
