updated menu url

--- a/notes/index.html
+++ b/notes/index.html
@@ -15,9 +15,9 @@
       <div id="header"> <img src="/monsterb-logo.png" alt="monsterb.org logo" />
       </div>
        <div id="topbar">
-	     <a href="http://monsterb.github.io/index.html">Home</a>
-	     <a href="http://monsterb.github.io/about.html">About</a>
-	     <a href="http://monsterb.github.io/contact.html">Contact</a>
+	     <a href="https://monsterb.github.io/index.html">Home</a>
+	     <a href="https://monsterb.github.io/about.html">About</a>
+	     <a href="https://monsterb.github.io/contact.html">Contact</a>
 	     <a href="index.html">Notes</a>
 	     </div>
 	      <div id="main">
