--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
           <br />
           <p>&nbsp;Welcome to monsterb | daemons, gnus, and penguins. Oh my! Formerly known as monsterb.org. This retro style site is a link portal dedicated to BSD, Cyber Security, Emulation, Ethical Hacking, FOSS, GNU, illumos, Information Security, Infosec, IT Security, Linux, Podcasting, Programming, Python, Oggcasting, OpenSource, Scripting, Robotics, Unix, Video Games, and beyond.</p>
           <br />
-          <p>Site Updated: Nov. Friday the 13th, 2020</p>
+          <p>Site Updated: November Saturday the 14th, 2020</p>
 			 <br />
 
 	     </div>
