--- a/ocp/contact.html
+++ b/ocp/contact.html
@@ -16,9 +16,8 @@
        <div id="topbar">
 	     <a href="index.html">Home</a>
 	     <a href="contact.html">Contact</a>
-	     <a href="friends.html">Friends</a>
 	     <a href="irc.html">IRC</a>
-	     <a href="members.html">Members</a>
+	     <a href="oggcasts.html">Oggcasts</a>
 	     </div>
 	      <div id="main">
           <h3>Contact:</h3>
@@ -36,7 +35,7 @@
 	  <div id="playogg"> <a href="http://www.fsf.org/campaigns/playogg/en/"><img src="play_ogg_large.png" alt="Play Ogg" /></a></div>
 
 	  <div id="footer">
-	    <p>Copyleft &copy; 2010-2018 Oggcast Planet | CSS3 &#10003; HTML5 &#10003;</p>
+	    <p>Copyleft &copy; 2010-2021 Oggcast Planet | CSS3 &#10003; HTML5 &#10003;</p>
 
 	   </div>
 	  </div>
