--- a/ocp/index.html
+++ b/ocp/index.html
@@ -17,17 +17,16 @@
        <div id="topbar">
 	     <a href="index.html">Home</a>
 	     <a href="contact.html">Contact</a>
-	     <a href="friends.html">Friends</a>
 	     <a href="irc.html">IRC</a>
-	     <a href="members.html">Members</a>
+	     <a href="oggcasts.html">Oggcasts</a>
 	     </div>
 	      <div id="main">
           <h3>Injecting Vorbis into your eardrums since 2010.</h3>
 	  <br />
 	  <p>&nbsp;Welcome to Oggcast Planet! Oggcast Planet (OCP) was founded on March 14th, 2010 to unite oggcasters and share a chat room.
 	  Here you will find links and information on high quality shows that are 100% Oggcasts (and one low quality show). Some shows
-	  claim to be an Oggcast, but actually they are just Podcasts. An Oggcast is a show that offers only Ogg to their listeners and
-	  not patent encumbered codecs like mp3. What is an Ogg you ask? <a href="http://www.vorbis.com/">Ogg Vorbis</a> is a completely open, patent-free, professional audio
+	  claim to be an Oggcast, but actually they are just Podcasts. An Oggcast is a show that offers Ogg to their listeners and
+	  not patent encumbered codecs. What is an Ogg you ask? <a href="http://www.vorbis.com/">Ogg Vorbis</a> is a completely open, patent-free, professional audio
 	  encoding and streaming technology with all the benefits of Open Source. Oggcast Planet fully supports the
 	  <a href="http://www.fsf.org/campaigns/playogg/en/">PlayOgg</a> campaign founded by the <a href="http://www.fsf.org/">Free Software Foundation</a> (FSF), and <a href="http://spreadopenmedia.com/">Spread Open Media</a>
 	  founded by the <a href="http://xiph.org/">Xiph.Org Foundation</a>.</p>
@@ -38,7 +37,7 @@
 	  <div id="playogg"> <a href="http://www.fsf.org/campaigns/playogg/en/"><img src="play_ogg_large.png" alt="Play Ogg" /></a></div>
 
 	  <div id="footer">
-	  	    <p>Copyleft &copy; 2010-2018 Oggcast Planet | CSS3 &#10003; HTML5 &#10003;</p>
+	  	    <p>Copyleft &copy; 2010-2021 Oggcast Planet | CSS3 &#10003; HTML5 &#10003;</p>
 	   </div>
 	  </div>
   </body>
