--- a/ocp/oggcasts.html
+++ b/ocp/oggcasts.html
@@ -8,7 +8,7 @@
   	<link href="ocp.css" media="screen" rel="stylesheet" type="text/css" />
 	<meta charset="utf-8" />
 	<link rel="shortcut icon" href="favicon.png" />
-   <title>Oggcast Planet | Members</title>
+   <title>Oggcast Planet | Oggcasts</title>
   </head>
    <body>
     <div id="container">
@@ -20,7 +20,7 @@
 	     <a href="oggcasts.html">Oggcasts</a>
 	     </div>
 	      <div id="main">
-          <h3>Oggcast Planet Members:</h3>
+          <h3>Oggcasts:</h3>
 	  <br />
 
 <ul>
