--- a/ocp/contact.html
+++ b/ocp/contact.html
@@ -17,7 +17,7 @@
 	     <a href="index.html">Home</a>
 	     <a href="contact.html">Contact</a>
 	     <a href="irc.html">IRC</a>
-	     <a href="oggcasts.html">Oggcasts</a>
+	     <a href="oggcasts.html">Oggcasts (0)</a>
 	     </div>
 	      <div id="main">
           <h3>Contact:</h3>
