--- a/ocp/ocp_template.html
+++ b/ocp/ocp_template.html
@@ -16,9 +16,8 @@
        <div id="topbar">
 	     <a href="index.html">Home</a>
 	     <a href="contact.html">Contact</a>
-	     <a href="friends.html">Friends</a>
 	     <a href="irc.html">IRC</a>
-	     <a href="members.html">Members</a>
+	     <a href="oggcasts.html">Oggcasts (0)</a>
 	     </div>
 	      <div id="main">
           <h3>Template</h3>
