--- a/ocp/oggcasts.html
+++ b/ocp/oggcasts.html
@@ -17,10 +17,10 @@
 	     <a href="index.html">Home</a>
 	     <a href="contact.html">Contact</a>
 	     <a href="irc.html">IRC</a>
-	     <a href="oggcasts.html">Oggcasts</a>
+	     <a href="oggcasts.html">Oggcasts (0)</a>
 	     </div>
 	      <div id="main">
-          <h3>Oggcasts:</h3>
+          <h3>Oggcasts (0):</h3>
 	  <br />
 
 <ul>
