--- a/ocp/oggcasts2.html
+++ b/ocp/oggcasts2.html
@@ -3,35 +3,35 @@
 <!--
 	Maintainer: monsterb
 	Contact: UNIX.S3C (at) gmail (dot) com
-	URL: https://monsterb.github.io/ -->
+	URL: https://monsterb.github.io/ocp/ -->
 <head>
-  	<link href="monsterborg.css" media="screen" rel="stylesheet" type="text/css" />
+  	<link href="ocp.css" media="screen" rel="stylesheet" type="text/css" />
 	<meta charset="utf-8" />
-	<link rel="shortcut icon" href="favicon.png" />
-   <title>monsterb | daemons, gnus, and penguins. Oh my! | Audiocasts, Netcasts, Oggcasts, Podcasts, Webcasts</title>
+	<link rel="shortcut icon" href="z.png" />
+   <title>Oggcast Planet | Injecting Vorbis into your eardrums since 2010.</title>
   </head>
    <body>
     <div id="container">
-      <div id="header"> <img src="monsterb-logo.png" alt="monsterb.org logo" />
-      </div>
+      <div id="header"> <img src="ocp.png" alt="Oggcast Planet" /></div>
        <div id="topbar">
 	     <a href="index.html">Home</a>
-	     <a href="about.html">About</a>
 	     <a href="contact.html">Contact</a>
-	     <a href="/notes/index.html">Notes</a>
+	     <a href="irc.html">IRC</a>
+	     <a href="oggcasts.html">Oggcasts (0)</a>
 	     </div>
 	      <div id="main">
-          <h3>Audiocasts, Netcasts, Oggcasts, Podcasts, Webcasts (65):</h3>
+
+          <h3>Oggcasts (65):</h3>
           <br />
           <ul>
-          <li><a href="podcasts.html#BSD">BSD</a> (2)</li>
-          <li><a href="podcasts.html#CyberSecurity">Cyber Security, Forensics, Hacking, InfoSec, PenTesting</a> (13)</li>
-          <li><a href="podcasts.html#FOSS">FOSS, Misc. Tech, Open Source, and Programming</a> (9)</li>
-          <li><a href="podcasts.html#Linux">GNU/Linux</a> (18)</li>
-          <li><a href="podcasts.html#Hardware">Hardware</a> (1)</li>
-          <li><a href="podcasts.html#Networks">Networks and Portals</a> (9)</li>
-          <li><a href="podcasts.html#Python">Python Programming</a> (3)</li>
-          <li><a href="podcasts.html#Video_Games">Video Games</a> (10)</li>
+          <li><a href="oggcasts2.html#BSD">BSD</a> (2)</li>
+          <li><a href="oggcasts2.html#CyberSecurity">Cyber Security, Forensics, Hacking, InfoSec, PenTesting</a> (13)</li>
+          <li><a href="oggcasts2.html#FOSS">FOSS, Misc. Tech, Open Source, and Programming</a> (9)</li>
+          <li><a href="oggcasts2.html#Linux">GNU/Linux</a> (18)</li>
+          <li><a href="oggcasts2.html#Hardware">Hardware</a> (1)</li>
+          <li><a href="oggcasts2.html#Networks">Networks and Portals</a> (9)</li>
+          <li><a href="oggcasts2.html#Python">Python Programming</a> (3)</li>
+          <li><a href="oggcasts2.html#Video_Games">Video Games</a> (10)</li>
           </ul>
           <br /><br /><br /><br />
 
@@ -129,48 +129,15 @@
           <p>Video Game Hangover <a href="https://vghangover.com/">https://vghangover.com/</a></p>
           <p>Video Game Outsiders <a href="https://videogameoutsiders.com/">https://videogameoutsiders.com/</a></p>
 
-
-
-
 	  <br />
+	      </div>
 
+	  <div id="playogg"> <a href="http://www.fsf.org/campaigns/playogg/en/"><img src="play_ogg_large.png" alt="Play Ogg" /></a></div>
 
-	     </div>
-	       <div id="favorites">
-	       <h3>Favorites:</h3>
-         <ul>
-          <li><a href="https://www.2600.com/" class="tooltip">2600<span>Hacker Magazine, News, and Radio</span></a></li>
-          <li><a href="https://www.bsdmag.org/" class="tooltip">BSD Magazine<span>BSD Magazine is a project devoted to BSD and open source solutions, targeting both beginners and experienced users. It is a free, online monthly publication available as a download from our website. </span></a></li>
-          <li><a href="http://www.codeuniversity.com/" class="tooltip">Code University<span>Blog, Cheatsheets, Tutorials</span></a></li>
-          <li><a href="https://www.debuntu.org/" class="tooltip">Debuntu.org<span>Debian/Ubuntu .deb packages, Unix/Linux Tutorials, Tips and Tricks.</span></a></li>
-          <li><a href="https://distrowatch.com/" class="tooltip">DistroWatch<span>Put the fun back into computing. Use Linux, BSD.</span></a></li>
-          <li><a href="https://www.eff.org/" class="tooltip">EFF<span>The Electronic Frontier Foundation is the leading civil liberties group defending your rights in the digital world.</span></a></li>
-          <li><a href="https://www.freebsdfoundation.org/" class="tooltip">FreeBSD Foundation<span>Non-profit organization dedicated to supporting and promoting the FreeBSD Project.</span></a></li>
-          <li><a href="https://www.fsf.org" class="tooltip">FSF<span>The Free Software Foundation is a nonprofit with a worldwide mission to promote computer user freedom and to defend the rights of all free software users.</span></a></li>
-          <li><a href="https://www.gnu.org" class="tooltip">GNU OS<span>The GNU Project was launched in 1984 to develop a complete Unix-like operating system which is free software: the GNU operating system.</span></a></li>
-          <li><a href="https://gnuworldorder.info/" class="tooltip">GNU World Order<span>GNU World Order is an internet audio show about GNU, Linux, UNIX, and other technical and geeky topics.</span></a></li>
-          <li><a href="https://hackerpublicradio.org" class="tooltip">Hacker Public Radio<span>By the community, for the community.</span></a></li>
-          <li><a href="https://kernel.org/" class="tooltip">kernel.org<span>The primary site for the Linux kernel source.</span></a></li>
-          <li><a href="https://letsencrypt.org/" class="tooltip">Let's Encrypt<span>Let’s Encrypt is a new Certificate Authority: It’s free, automated, and open.</span></a></li>
-          <li><a href="https://lhspodcast.info/" class="tooltip">Linux in the Ham Shack<span>A podcast designed to help amateur radio enthusiasts to migrate to Linux and Open Source from Microsoft or other closed-source software.</span></a></li>
-          <li><a href="https://monsterb.github.io/ocp/" class="tooltip">Oggcast Planet<span>Injecting Vorbis into your eardrums since 2010.</span></a></li>
-          <li><a href="https://www.eff.org/privacybadger" class="tooltip">Privacy Badger<span>Privacy Badger blocks spying ads and invisible trackers.</span></a></li>
-          <li><a href="https://www.python.org/psf/" class="tooltip">PSF<span>Python Software Foundation</span></a></li>
-          <li><a href="https://www.reddit.com/r/linux" class="tooltip">reddit/linux<span>Online community where users vote on content.</span></a></li>
-          <li><a href="http://slackermedia.info" class="tooltip">Slackermedia<span>Slackermedia is documentation providing the information a user needs to create a full multimedia studio running on Slackware Linux.</span></a></li>
-          <li><a href="https://bsd.slashdot.org/" class="tooltip">Slashdot BSD<span>Don't fear the deamons!</span></a></li>
-          <li><a href="https://linux.slashdot.org/" class="tooltip">Slashdot Linux<span>Don't fear the penguins!</span></a></li>
-          <li><a href="https://linux.softpedia.com/" class="tooltip">Softpedia Linux<span>Linux Software and Reviews</span></a></li>
-          <li><a href="https://www.tllts.org/" class="tooltip">TLLTS<span>Weekly live webcasted radio style show about GNU/Linux and Technology. </span></a></li>
-          <li><a href="http://www.tuxmachines.org/" class="tooltip">tuxmachines.org<span>Do you waddle the waddle?</span></a></li>
-        </ul>
+	  <div id="footer">
+	    <p>Copyleft &copy; 2010-2021 Oggcast Planet <a href="http://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2Foggcastplanet.org%2Focp.css&profile=css3&usermedium=all&warning=1&vextwarning=">CSS3</a> &#10003; <a href="https://validator.w3.org/nu/?doc=http%3A%2F%2Foggcastplanet.org%2F">HTML5</a> &#10003;</p>
 
-		  </div>
-
-
-	         <div id="footer">
-	           <p>Copyleft &copy; 2006-2021 monsterb | daemons, gnus, and penguins. Oh my! | CSS3 &#10003; HTML5 &#10003;</p>
-	         </div>
+	   </div>
 	  </div>
   </body>
 </html>
