--- a/ocp/index.html
+++ b/ocp/index.html
@@ -3,42 +3,65 @@
 <!--
 	Maintainer: monsterb
 	Contact: UNIX.S3C (at) gmail (dot) com
-	URL: https://monsterb.github.io/ocp/ -->
+	URL: https://monsterb.github.io/ -->
 <head>
-  	<link href="ocp.css" media="screen" rel="stylesheet" type="text/css" />
+  	<link href="monsterborg.css" media="screen" rel="stylesheet" type="text/css" />
 	<meta charset="utf-8" />
 	<link rel="shortcut icon" href="favicon.png" />
-   <title>Oggcast Planet | Injecting Vorbis into your eardrums since 2010.</title>
+   <title>monsterb | daemons, gnus, and penguins. Oh my! | Oggcast Planet</title>
   </head>
    <body>
     <div id="container">
-      <div id="header"> <img src="ocp.png" alt="Oggcast Planet" />
+      <div id="header"> <img src="monsterb-logo.png" alt="monsterb.org logo" />
       </div>
        <div id="topbar">
 	     <a href="index.html">Home</a>
+	     <a href="about.html">About</a>
 	     <a href="contact.html">Contact</a>
-	     <a href="irc.html">IRC</a>
-	     <a href="oggcasts.html">Oggcasts (0)</a>
+	     <a href="/notes/index.html">Notes</a>
 	     </div>
 	      <div id="main">
-          <h3>Injecting Vorbis into your eardrums since 2010.</h3>
-	  <br />
-	  <p>&nbsp;Welcome to Oggcast Planet! Oggcast Planet (OCP) was founded on March 14th, 2010 to unite oggcasters and share a chat room.
-	  Here you will find links and information on high quality shows that are 100% Oggcasts (and one low quality show). Some shows
-	  claim to be an Oggcast, but actually they are just Podcasts. An Oggcast is a show that offers Ogg to their listeners and
-	  not patent encumbered codecs. What is an Ogg you ask? <a href="http://www.vorbis.com/">Ogg Vorbis</a> is a completely open, patent-free, professional audio
-	  encoding and streaming technology with all the benefits of Open Source. Oggcast Planet fully supports the
-	  <a href="http://www.fsf.org/campaigns/playogg/en/">PlayOgg</a> campaign founded by the <a href="http://www.fsf.org/">Free Software Foundation</a> (FSF), and <a href="http://spreadopenmedia.com/">Spread Open Media</a>
-	  founded by the <a href="http://xiph.org/">Xiph.Org Foundation</a>.</p>
-	  <br />
-	  <p>We chat on irc.freenode.net <a href="http://webchat.freenode.net/?channels=oggcastplanet">#oggcastplanet</a>.</p>
-	      </div>
+          <h3>Under Construction! Check back later.</h3>
 
-	  <div id="playogg"> <a href="http://www.fsf.org/campaigns/playogg/en/"><img src="play_ogg_large.png" alt="Play Ogg" /></a></div>
+	  <br />
 
-	  <div id="footer">
-	  	    <p>Copyleft &copy; 2010-2021 Oggcast Planet | CSS3 &#10003; HTML5 &#10003;</p>
-	   </div>
+
+	     </div>
+	       <div id="favorites">
+	       <h3>Favorites:</h3>
+         <ul>
+          <li><a href="https://www.2600.com/" class="tooltip">2600<span>Hacker Magazine, News, and Radio</span></a></li>
+          <li><a href="https://www.bsdmag.org/" class="tooltip">BSD Magazine<span>BSD Magazine is a project devoted to BSD and open source solutions, targeting both beginners and experienced users. It is a free, online monthly publication available as a download from our website. </span></a></li>
+          <li><a href="http://www.codeuniversity.com/" class="tooltip">Code University<span>Blog, Cheatsheets, Tutorials</span></a></li>
+          <li><a href="https://www.debuntu.org/" class="tooltip">Debuntu.org<span>Debian/Ubuntu .deb packages, Unix/Linux Tutorials, Tips and Tricks.</span></a></li>
+          <li><a href="https://distrowatch.com/" class="tooltip">DistroWatch<span>Put the fun back into computing. Use Linux, BSD.</span></a></li>
+          <li><a href="https://www.eff.org/" class="tooltip">EFF<span>The Electronic Frontier Foundation is the leading civil liberties group defending your rights in the digital world.</span></a></li>
+          <li><a href="https://www.freebsdfoundation.org/" class="tooltip">FreeBSD Foundation<span>Non-profit organization dedicated to supporting and promoting the FreeBSD Project.</span></a></li>
+          <li><a href="https://www.fsf.org" class="tooltip">FSF<span>The Free Software Foundation is a nonprofit with a worldwide mission to promote computer user freedom and to defend the rights of all free software users.</span></a></li>
+          <li><a href="https://www.gnu.org" class="tooltip">GNU OS<span>The GNU Project was launched in 1984 to develop a complete Unix-like operating system which is free software: the GNU operating system.</span></a></li>
+          <li><a href="https://gnuworldorder.info/" class="tooltip">GNU World Order<span>GNU World Order is an internet audio show about GNU, Linux, UNIX, and other technical and geeky topics.</span></a></li>
+          <li><a href="https://hackerpublicradio.org" class="tooltip">Hacker Public Radio<span>By the community, for the community.</span></a></li>
+          <li><a href="https://kernel.org/" class="tooltip">kernel.org<span>The primary site for the Linux kernel source.</span></a></li>
+          <li><a href="https://letsencrypt.org/" class="tooltip">Let's Encrypt<span>Let’s Encrypt is a new Certificate Authority: It’s free, automated, and open.</span></a></li>
+          <li><a href="https://lhspodcast.info/" class="tooltip">Linux in the Ham Shack<span>A podcast designed to help amateur radio enthusiasts to migrate to Linux and Open Source from Microsoft or other closed-source software.</span></a></li>
+          <li><a href="https://monsterb.github.io/ocp/" class="tooltip">Oggcast Planet<span>Injecting Vorbis into your eardrums since 2010.</span></a></li>
+          <li><a href="https://www.eff.org/privacybadger" class="tooltip">Privacy Badger<span>Privacy Badger blocks spying ads and invisible trackers.</span></a></li>
+          <li><a href="https://www.python.org/psf/" class="tooltip">PSF<span>Python Software Foundation</span></a></li>
+          <li><a href="https://www.reddit.com/r/linux" class="tooltip">reddit/linux<span>Online community where users vote on content.</span></a></li>
+          <li><a href="http://slackermedia.info" class="tooltip">Slackermedia<span>Slackermedia is documentation providing the information a user needs to create a full multimedia studio running on Slackware Linux.</span></a></li>
+          <li><a href="https://bsd.slashdot.org/" class="tooltip">Slashdot BSD<span>Don't fear the deamons!</span></a></li>
+          <li><a href="https://linux.slashdot.org/" class="tooltip">Slashdot Linux<span>Don't fear the penguins!</span></a></li>
+          <li><a href="https://linux.softpedia.com/" class="tooltip">Softpedia Linux<span>Linux Software and Reviews</span></a></li>
+          <li><a href="https://www.tllts.org/" class="tooltip">TLLTS<span>Weekly live webcasted radio style show about GNU/Linux and Technology. </span></a></li>
+          <li><a href="http://www.tuxmachines.org/" class="tooltip">tuxmachines.org<span>Do you waddle the waddle?</span></a></li>
+        </ul>
+
+		  </div>
+
+
+	         <div id="footer">
+	           <p>Copyleft &copy; 2006-2021 monsterb | daemons, gnus, and penguins. Oh my! | CSS3 &#10003; HTML5 &#10003;</p>
+	         </div>
 	  </div>
   </body>
 </html>
