--- a/ocp/index.html
+++ b/ocp/index.html
@@ -5,20 +5,20 @@
 	Contact: UNIX.S3C (at) gmail (dot) com
 	URL: https://monsterb.github.io/ -->
 <head>
-  	<link href="monsterborg.css" media="screen" rel="stylesheet" type="text/css" />
+  	<link href="/monsterborg.css" media="screen" rel="stylesheet" type="text/css" />
 	<meta charset="utf-8" />
-	<link rel="shortcut icon" href="favicon.png" />
+	<link rel="shortcut icon" href="/favicon.png" />
    <title>monsterb | daemons, gnus, and penguins. Oh my! | Oggcast Planet</title>
   </head>
    <body>
     <div id="container">
-      <div id="header"> <img src="monsterb-logo.png" alt="monsterb.org logo" />
+      <div id="header"> <img src="/monsterb-logo.png" alt="monsterb.org logo" />
       </div>
        <div id="topbar">
-	     <a href="index.html">Home</a>
-	     <a href="about.html">About</a>
-	     <a href="contact.html">Contact</a>
-	     <a href="/notes/index.html">Notes</a>
+	     <a href="https://monsterb.github.io/index.html">Home</a>
+	     <a href="https://monsterb.github.io/about.html">About</a>
+	     <a href="https://monsterb.github.io/contact.html">Contact</a>
+	     <a href="https://monsterb.github.io//notes/index.html">Notes</a>
 	     </div>
 	      <div id="main">
           <h3>Under Construction! Check back later.</h3>
