--- a/ocp/index.html
+++ b/ocp/index.html
@@ -19,6 +19,7 @@
 	     <a href="https://monsterb.github.io/about.html">About</a>
 	     <a href="https://monsterb.github.io/contact.html">Contact</a>
 	     <a href="https://monsterb.github.io//notes/index.html">Notes</a>
+       <a href="index.html">Oggcast Planet</a>
 	     </div>
 	      <div id="main">
           <h3>Under Construction! Check back later.</h3>
