--- a/ocp/index.html
+++ b/ocp/index.html
@@ -33,6 +33,9 @@
           founded by the <a href="http://xiph.org/">Xiph.Org Foundation</a>.</p>
           <br />
           <p>We chat on irc.freenode.net <a href="http://webchat.freenode.net/?channels=oggcastplanet">#oggcastplanet</a>.</p>
+          <br /><br /><br />
+          <p>This page is under construction. Come back later for a list of oggcasts. Thank you.</p>
+
 	  <br />
 
 
