--- a/ocp/index.html
+++ b/ocp/index.html
@@ -34,7 +34,46 @@
           <br />
           <p>We chat on irc.freenode.net <a href="http://webchat.freenode.net/?channels=oggcastplanet">#oggcastplanet</a>.</p>
           <br /><br /><br />
-          <p>This page is under construction. Come back later for a list of oggcasts. Thank you.</p>
+          <h3>Oggcasts (16):</h3>
+          <br />
+          <ul>
+          <li><a href="index.html#BSD">BSD</a> (1)</li>
+          <li><a href="index.html#FOSS">FOSS, Misc. Tech, Open Source, and Programming</a> (3)</li>
+          <li><a href="index.html#Gaming">Gaming</a> (2)</li>
+          <li><a href="index.html#Linux">GNU/Linux</a> (11)</li>
+          </ul>
+          <br /><br /><br /><br />
+
+          <h3><a id="BSD">BSD</a> (1):</h3>
+          <p>bsdtalk <a href="https://www.bsdtalk.org">https://www.bsdtalk.org</a></p>
+
+          <br /><br /><br /><br />
+
+          <h3><a id="FOSS">FOSS, Misc. Tech, Open Source, and Programming</a> (3):</h3>
+          <p>Bad Voltage <a href="http://www.badvoltage.org/">http://www.badvoltage.org/</a></p>
+          <p>Hacker Public Radio <a href="https://hackerpublicradio.org">https://hackerpublicradio.org</a></p>
+          <p>urandom podcast <a href="https://urandom-podcast.info/">https://urandom-podcast.info/</a></p>
+
+          <br /><br /><br /><br />
+
+          <h3><a id="Gaming">Gaming</a> (2):</h3>
+          <p>Chronicles <a href="http://mixedsignals.ml/cnc/">http://mixedsignals.ml/cnc/</a></p>
+          <p>GAMERadio <a href="https://www.hwhq.com">https://www.hwhq.com</a></p>
+
+          <br /><br /><br /><br />
+
+          <h3><a id="Linux">GNU/Linux</a> (11):</h3>
+          <p>Distrohoppers' Digest <a href="https://distrohoppersdigest.blogspot.com/">https://distrohoppersdigest.blogspot.com/</a></p>
+          <p>DistroWatch Weekly Podcast Feed: <a href="http://distrowatch.com/news/oggcast.xml">ogg</a></p>
+          <p>Free as in Freedom <a href="http://faif.us/">http://faif.us/</a></p>
+          <p>GNU World Order <a href="https://gnuworldorder.info/">https://gnuworldorder.info/</a></p>
+          <p>Going Linux <a href="https://goinglinux.com">https://goinglinux.com</a></p>
+          <p>Linux in the Ham Shack <a href="https://lhspodcast.info/">https://lhspodcast.info/</a></p>
+          <p>Linux Link Tech Show <a href="https://tllts.org/">https://tllts.org/</a></p>
+          <p>LinuxLugCast <a href="https://linuxlugcast.com/">https://linuxlugcast.com/</a></p>
+          <p>mintCast <a href="https://mintcast.org">https://mintcast.org</a></p>
+          <p>Sunday Morning Linux Review <a href="https://smlr.us/">https://smlr.us/</a></p>
+          <p>Sysadministrivia <a href="https://sysadministrivia.com/">https://sysadministrivia.com/</a></p>
 
 	  <br />
 
