--- a/podcasts.html
+++ b/podcasts.html
@@ -39,7 +39,7 @@
 
           <h3><a id="BSD">BSD</a> (2):</h3>
           <p>BSD Now <a href="https://www.bsdnow.tv">https://www.bsdnow.tv</a></p>
-          <p>bsdtalk <a href="https://www.bsdtalk.org">https://www.bsdtalk.org</a></p>
+          <p>bsdtalk <a href="http://www.bsdtalk.org">http://www.bsdtalk.org</a></p>
 
           <br /><br /><br /><br />
 
@@ -67,7 +67,7 @@
           <p>Hacker Public Radio <a href="https://hackerpublicradio.org">https://hackerpublicradio.org</a></p>
           <p>Herding Code <a href="https://herdingcode.com">https://herdingcode.com</a></p>
           <p>Knightwise.com <a href="https://knightwise.com/">https://knightwise.com/</a></p>
-          <p>The Change Log <a href="https://thechangelog.com">https://thechangelog.com</a></p>
+          <p>The Change Log <a href="https://changelog.com/">https://changelog.com/</a></p>
           <p>urandom podcast <a href="https://urandom-podcast.info/">https://urandom-podcast.info/</a></p>
 
           <br /><br /><br /><br />
